TokanPages.ClientApp/src/Components/Account/UserSignin/View/userSigninView.css
.user-signin-view-tag-container {
    position: absolute;
    z-index: 900;
    top: -8px;
    left: -8px;
}

.user-signin-view-tag-colour {
    color: #422e00;
}

.user-signin-view-bottom-container {
    margin-top: auto;
}

.user-signin-view-card-image {
    height: 256px !important;
    object-fit: cover;
    border-bottom-left-radius: 0.75rem;
    border-bottom-right-radius: 0.75rem;
}

.user-signin-view-card-signin {
    height: auto;
    width: 33vw;
}

@media (min-width: 1024px) {
    .user-signin-view-card-signin {
        width: 40vw;
        max-width: 560px;
    }
}

@media (min-width: 768px) and (max-width: 1024px) {
    .user-signin-view-card-signin {
        width: 40vw;
    }
}

@media (max-width: 768px) {
    .user-signin-view-card-signin {
        margin-bottom: 3rem;
        width: 100vw;
    }
}

.user-signin-view-card-news {
    position: relative;
    height: auto;
    width: 33vw;
}

@media (min-width: 1024px) {
    .user-signin-view-card-news {
        width: 40vw;
        max-width: 560px;
    }
}

@media (min-width: 768px) and (max-width: 1024px) {
    .user-signin-view-card-news {
        width: 40vw;
    }
}

@media (max-width: 768px) {
    .user-signin-view-card-news {
        width: 100vw;
    }
}

